2011-09-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvidvi.test: New shell script for tests.
	* tests/{play.dvi,playout.2}: Test input and expected output.
	* Makefile.am: Add the test and its data.

2011-09-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvidvi.c (writedvifile): Write newline at end of stdout.

2011-04-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvidvi.c (writepreamble): Cast string literal to 'unsigned
	const char *' to avoid 'differ in signedness' warning.

2011-02-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (EXTRA_DIST): read.me has been renamed README.

2010-05-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvidvi.c (SET_BINARY): Remove casts to void.

2010-02-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CPPFLAGS): Remove '-DNO_DEBUG' ...
	* configure.ac: ... now added via KPSE_KPATHSEA_FLAGS.

2009-08-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid maximal compiler warnings.
	* dvidvi.c (oname): Constify global string.
	(error, putstr): Constify string arg.

2009-06-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CPPFLAGS): remove -DNeedFunctionPrototypes.

2009-06-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CFLAGS): enable compiler warnings.
	* dvidvi.c: declare most function as static and define them
	with ANSI C prototypes. #include <unistd.h> to declare isatty.
	Remove unused variables.
	Remove SHORTINT (to select '%ld' or '%d' format specifiers),
	all relevant variables are integer (typedef'ed as long).

2009-06-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvidvi.c: always include <stdlib.h>, to avoid implicit
	declaration of calloc, exit, free, and malloc.

2009-05-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Adapt to TL2009 build system.

2008-02-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.in: added AC_CONFIG_HEADERS (moved
	from ../kpathsea/common.ac to here).

2008-01-29  Peter Breitenlohner  <peb@mppmu.mpg.de>
